test/errors/unknown_escape.sg
' Test unknown escape sequence
(:= test "hello\xworld")